README minor fixes

--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 Esto es un bot de Telegram programado en Python gracias a esta [[https://github.com/eternnoir/pyTelegramBotAPI/tree/02c22c990b1affe9d43d8920f6b53fa10c38a82e][API]] que nos ofrece [[https://github.com/eternnoir][@eternnoir]].
 
-* Instalación and uso
+* Instalación y uso
 - Instalar las [[https://github.com/eternnoir/pyTelegramBotAPI#getting-started][dependencias]]
 #+BEGIN_SRC bash
   $ pip install pyTelegramBotAPI
